Fixed Icon alignment issues by making it flex.

--- a/modules/gui/frontend/src/app/home/body/process/mosaic/sceneSelection.module.css
+++ b/modules/gui/frontend/src/app/home/body/process/mosaic/sceneSelection.module.css
@@ -110,6 +110,10 @@
     width: 4.5rem;
 }
 
+.info {
+    display: flex;
+}
+
 /* bar */
 
 .bar {
