--- a/modules/gui/frontend/src/widget/button.module.css
+++ b/modules/gui/frontend/src/widget/button.module.css
@@ -125,6 +125,10 @@
     position: relative;
 }
 
+.button > .contents {
+    display: flex;
+}
+
 /* spacing between icon and label */
 
 .button > .contents > * + * {
