--- a/modules/gui/frontend/src/widget/icon.module.css
+++ b/modules/gui/frontend/src/widget/icon.module.css
@@ -1,3 +1,5 @@
 i.icon {
-    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
